syntax = "proto3";

option csharp_namespace = "CartService.GrpcServer";

package cart;

service CartService {
  rpc GetCartContent (GetCartByUserIdRequest) returns (GetCartByUserIdReply);
  rpc ClearCart (ClearCartRequest) returns (Empty);
}

message GetCartByUserIdRequest {
  string userId = 1;
}

message CartItemReply {
  string meal_id = 1;
  int32 quantity = 2;
}

message GetCartByUserIdReply {
  repeated CartItemReply items = 1;
}

message ClearCartRequest {
  string userId = 1;
}

message Empty {

}
